--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material mkdocs mkdocstrings[python] mkdocstrings
+      - run: pip install -e .
       - run: mkdocs gh-deploy --force
